<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_cartable_navigation"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_profile_navigation_layer"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_about_navigation_foreground"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_webview_navigation_foreground"
            android:title="@string/menu_send" />

    </group>



</menu>
