<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ageny.yadegar.sirokhcms.UserInterfaceClass.Cartable.CartableFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_cartable" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ageny.yadegar.sirokhcms.UserInterfaceClass.UserProfile.UserProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_userprofile" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ageny.yadegar.sirokhcms.UserInterfaceClass.Aboutus.AboutusFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ageny.yadegar.sirokhcms.UserInterfaceClass.Exit.ExitFragment"
        android:label="@string/menu_send"
        />
</navigation>