<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="#fafafa"
    android:foregroundGravity="right"
    android:gravity="right"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textDirection="anyRtl">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/lable_textView_people_alertdialog_fullname"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/FullName" />

        <TextView
            android:id="@+id/textView_people_alertdialog_fullname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textDirection="anyRtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/lable_textView_people_alertdialog_phon"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/Phone" />

        <TextView
            android:id="@+id/textView_people_alertdialog_phon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="متن تستی"
            android:textDirection="anyRtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/lable_textView_people_alertdialog_mobile"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/Mobile" />

        <TextView
            android:id="@+id/textView_people_alertdialog_mobile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textDirection="anyRtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/lable_textView_people_alertdialog_address"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/Address" />

        <TextView
            android:id="@+id/textView_people_alertdialog_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textDirection="anyRtl" />
    </LinearLayout>


</LinearLayout>