<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="#fafafa"
    android:foregroundGravity="right"
    android:gravity="right"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textDirection="anyRtl">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/margin_alertdialog_username_textview_lable"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.43"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/AttachmentsActivityUser" />

        <TextView
            android:id="@+id/margin_alertdialog_username_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textDirection="anyRtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/margin_alertdialog_margintext_textview_lable"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/margin_text" />

        <TextView
            android:id="@+id/margin_alertdialog_margintext_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textDirection="anyRtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:textDirection="anyRtl">

        <TextView
            android:id="@+id/margin_alertdialog_rememberdate_textview_lable"
            style="@style/TextTitleCartableDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:drawablePadding="2dp"
            android:gravity="center|right"
            android:text="@string/MarginsActivityRememberDate" />

        <TextView
            android:id="@+id/margin_alertdialog_rememberdate_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textDirection="anyRtl" />
    </LinearLayout>



</LinearLayout>