<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:orientation="vertical"></LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="0.15"
                android:orientation="vertical">
<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_weight="0.12"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/Aboutus_imageView"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        app:srcCompat="@drawable/ic_login_logo" />-->

<!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.12"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/UsernameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/ActivityLoginUsername"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.12"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/PasswordTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/ActivityLoginPasswordd"
                        android:inputType="textPassword"
                        android:gravity="end"
                         />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.12"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/saveLoginCheckBox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/editTextPassword"
                        android:text="@string/activityLoginChckbx"
                        android:layoutDirection="rtl"
                         />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.12"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/LoginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/ActivityLoginLogin" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:orientation="vertical">

            </LinearLayout>

            <!--    </LinearLayout>-->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


        </LinearLayout>

    </LinearLayout>


